src/components/scss/Stock.scss
$normal-font-size: 13px;
$breakpoint-tablet: 768px;

#ticker-dropdown {
    width: 20vw;
    font-size: $normal-font-size;
    @media (max-width: $breakpoint-tablet) {
        width: auto;
    }
}

.label {
    padding: 10px;
    margin-left: 5px;
    font-size: 14px;
    font-weight: 600;
    color: #a9b2cd;
    justify-content: start !important;
    min-width: 120px;

    @media (max-width: $breakpoint-tablet) {
        padding: auto;
        margin-left: 0;
    }
}

.date-input {
    height: 20px;
    padding: 5px;
    border: 1px solid #cfcfcf;
    border-radius: 3px;
    margin: 10px;
    width: 15vw;
    cursor: pointer;
    display: inline-block;

    @media (max-width: $breakpoint-tablet) {
        margin: auto;
    }
}

#react-select-3-input {
    font-size: 12px !important;
}

.m-left-10 {
    margin-left: 10px;
}

.m-right-10 {
    margin-right: 10px;
}

.card-header {
    background: #1e2330 !important;
}

.blue-outline-btn {
    background-color: #7c4dff !important;
    border-color: transparent  !important;
    font-size: $normal-font-size !important;
    font-weight: 600 !important;
    @media (max-width: $breakpoint-tablet) {
        float: right;
        margin-top: 10px;
    }
}

.form-control {
    font-size: $normal-font-size !important;
}

#spinner-custom {
    color: white;
    width: 1.2rem;
    height: 1.2rem;
}

.m-left-5 {
    margin-left: 5px;
}

.form-group {
     @media (max-width: $breakpoint-tablet) {
        width: 100% !important;
    }
}

